--- a/SectionB/package.json
+++ b/SectionB/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.0",
     "bootstrap": "^5.3.7",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.2.0",
